v1.7:

 - Added --sort-locale, --tex-encoding and --csv-encoding

 - Import probsoln function now uses texparserlib.jar

v1.6:

 - Added --csvescape and --nocsvescape

v1.5:

 - Bug fix in probsoln import and added RedefNewProblem option

v1.4:

 - Extra merge options

v1.3:

 - Added --truncate, --filter-or, --filter-and, --filter-include
   --filter-exclude, --filter options.