@@ -176,8 +176,6 @@ preferences.startup.last.mnemonic=L
 preferences.startup.custom=Custom
 preferences.startup.custom.mnemonic=T
 preferences.shuffle=Shuffle
-preferences.shuffle.iter=Shuffle Iterations
-preferences.shuffle.iter.mnemonic=I
 preferences.shuffle.seed=Random Seed
 preferences.shuffle.seed.mnemonic=R
 preferences.initial.capacity=Initial Capacity
@@ -491,7 +489,6 @@ syntax.tex_encoding={0} <encoding>\t\tTeX (.tex or .dbtex) file encoding.
 syntax.owner_only={0}\tSet file permissions to owner read/write on .dbtex files. {1}
 syntax.noowner_only={0}\tDon''t change file permissions for .dbtex files. {1}
 syntax.seed={0} <number>\tSet the random seed to <number> or clear it if <number> is "".
-syntax.shuffle_iter={0} <number>\n\t\tSet the number of iterations performed in a shuffle to <number>.
 syntax.shuffle={0}\tShuffle the database. (Shuffle is always performed after sort,\n\t\tregardless of the option order.)
 syntax.no_shuffle={0}\tDon''t shuffle the database. (Default.)
 syntax.sort={0} [+|-]<field>\n\t\tSort the database on the column whose label is given by <field>.\n\t\tIf <field> is preceded by ''+'', use ascending order. If\n\t\t<field> is preceded by ''-'', use descending order. If sign\n\t\tprefix is omitted, ''+'' is assumed. (Sort is always performed\n\t\tbefore shuffle, regardless of option order.)
